k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    io.kompose.service: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - name: backend
          image: markokroselj/backend:1.0.1
          ports:
            - containerPort: 3000
