k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    io.kompose.service: backend
