k8s/contact-form-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: contact-form
  name: contact-form
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    io.kompose.service: contact-form
