k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    io.kompose.service: frontend
