k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  tls:
    - hosts:
        - devops-hw3.markokroselj.com
      secretName: app-tls
  rules:
    - host: devops-hw3.markokroselj.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000

          - path: /contact/?(.*)
            pathType: Prefix
            backend:
              service:
                name: contact-form
                port:
                  number: 5000

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
